fixed log overflow, resize sizing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body,
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
 }
 
 * {
@@ -14,16 +15,18 @@ body,
 
 .gutter {
   position: relative;
-  background: transparent;
-  transition: border-color 0.3s;
+  background-color: rgba(255, 255, 255, 0);
+  transition: border-color 0.3s, background-color 0.3s;
 }
 .gutter-vertical {
-  margin-top: -10px;
   border-bottom: 1px solid transparent;
+  margin-top: -5px;
+  padding-top: 4px;
 }
 .gutter-horizontal {
-  margin-left: -10px;
   border-right: 1px solid transparent;
+  margin-left: -5px;
+  padding-left: 4px;
 }
 .gutter-vertical:hover {
   cursor: row-resize;
